[metadata]
name = library_injector
#version = attr: src.VERSION
#license = file: license.txt

[options]

[options.extras_require]
develop =

[options.entry_points]
console_scripts =
    libij = injector.library_injector:main
    GRL_4_B = tests.algorithm.test_topological_sort:aoj_system_test [develop]
    GRL_4_B_JUDGE = tests.algorithm.test_topological_sort:aoj_system_test_judge [develop]